добавил скрипт для отсоединения

--- a/GeoAddin/GeoAddin.csproj
+++ b/GeoAddin/GeoAddin.csproj
@@ -69,12 +69,16 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DetachFile.cs" />
     <Compile Include="App.cs" />
     <Compile Include="Apartmentgraphy.cs" />
     <Compile Include="ApartmentNumFilling.cs" />
     <Compile Include="AssemblyInfo.cs" />
     <Compile Include="ApartmentgraphyWindow.xaml.cs">
       <DependentUpon>ApartmentgraphyWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="DetachFileWindow.xaml.cs">
+      <DependentUpon>DetachFileWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="RoomGenWindow.xaml.cs">
       <DependentUpon>RoomGenWindow.xaml</DependentUpon>
@@ -89,6 +93,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="GeoAddin.addin" />
+    <None Include="Resources\DetachFilePic.png" />
     <None Include="Resources\RoomGenPic.png" />
     <None Include="Resources\ApartmentNum.png" />
     <None Include="Resources\ApartmentgraphyPic.png" />
@@ -101,6 +106,10 @@
   </ItemGroup>
   <ItemGroup>
     <Page Include="ApartmentgraphyWindow.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="DetachFileWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
