--- a/GeoAddin/GeoAddin.csproj
+++ b/GeoAddin/GeoAddin.csproj
@@ -69,6 +69,8 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="WipeOption.cs" />
+    <Compile Include="RemoveAllUnused.cs" />
     <Compile Include="DetachFile.cs" />
     <Compile Include="App.cs" />
     <Compile Include="Apartmentgraphy.cs" />
